[gd_scene load_steps=8 format=3 uid="uid://mainscene"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/dog_3d.gd" id="2_dog"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.05, 0.05, 0.1, 1)
sky_horizon_color = Color(0.1, 0.08, 0.15, 1)
ground_bottom_color = Color(0.02, 0.02, 0.05, 1)
ground_horizon_color = Color(0.1, 0.08, 0.15, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_color = Color(0.3, 0.3, 0.4, 1)
ambient_light_energy = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_dog"]
size = Vector3(0.6, 0.4, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dog"]
albedo_color = Color(0.6, 0.3, 0.1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_dog"]
size = Vector3(0.6, 0.4, 0.3)

[node name="Main" type="Node3D"]
script = ExtResource("1_main")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 5, 8)
fov = 50.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 5, 10, 5)
shadow_enabled = true

[node name="CardSpawnArea" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollectedCardsDisplay" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -3)

[node name="Dog3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 2)
visible = false
script = ExtResource("2_dog")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Dog3D"]
mesh = SubResource("BoxMesh_dog")
surface_material_override/0 = SubResource("StandardMaterial3D_dog")

[node name="Area3D" type="Area3D" parent="Dog3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dog3D/Area3D"]
shape = SubResource("BoxShape3D_dog")

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="MainPanel" type="PanelContainer" parent="GameUI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="VBox" type="VBoxContainer" parent="GameUI/MainPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="GameUI/MainPanel/VBox"]
layout_mode = 2
text = "ROYAL RUSH 3D"
horizontal_alignment = 1

[node name="StatsPanel" type="HBoxContainer" parent="GameUI/MainPanel"]
layout_mode = 2
offset_top = 30.0
offset_right = 1280.0
offset_bottom = 70.0
theme_override_constants/separation = 40
alignment = 1

[node name="MoneyLabel" type="Label" parent="GameUI/MainPanel/StatsPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "$50"

[node name="DrawsLabel" type="Label" parent="GameUI/MainPanel/StatsPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Draws: 0"

[node name="ComboLabel" type="Label" parent="GameUI/MainPanel/StatsPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Combo: -"

[node name="DeckLabel" type="Label" parent="GameUI/MainPanel/StatsPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Deck: 52"

[node name="ShuffleButton" type="Button" parent="GameUI/MainPanel"]
layout_mode = 2
offset_left = 540.0
offset_top = 80.0
offset_right = 740.0
offset_bottom = 110.0
text = "SHUFFLE"

[node name="ResultLabel" type="Label" parent="GameUI/MainPanel"]
layout_mode = 2
offset_top = 115.0
offset_right = 1280.0
offset_bottom = 138.0
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="NotificationContainer" type="VBoxContainer" parent="GameUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 150.0
offset_right = -10.0
offset_bottom = 400.0
grow_horizontal = 0

[node name="UpgradePanel" type="PanelContainer" parent="GameUI"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = 150.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="GameUI/UpgradePanel"]
layout_mode = 2

[node name="Title" type="Label" parent="GameUI/UpgradePanel/VBox"]
layout_mode = 2
text = "UPGRADES"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="GameUI/UpgradePanel"]
layout_mode = 2
offset_top = 30.0
offset_right = 250.0
offset_bottom = 560.0

[node name="UpgradeGrid" type="VBoxContainer" parent="GameUI/UpgradePanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="WinModal" type="Control" parent="GameUI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameUI/WinModal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="GameUI/WinModal"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="GameUI/WinModal/Panel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="GameUI/WinModal/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 32
text = "ROYAL FLUSH!"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="GameUI/WinModal/Panel/VBox"]
layout_mode = 2
text = "Play Again"

[node name="PrestigeButton" type="Button" parent="GameUI/WinModal/Panel/VBox"]
visible = false
layout_mode = 2
text = "Prestige"

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0)

[node name="TableMesh" type="CSGBox3D" parent="Floor"]
size = Vector3(12, 0.2, 8)
material = SubResource("StandardMaterial3D_dog")
